--- a/css/combined.css
+++ b/css/combined.css
@@ -194,7 +194,7 @@ header.masthead {
   text-align: center;
   color: white;
   background-color: black;
-  background:linear-gradient(rgba(0,0,0,0.9), rgba(0,0,0,0.1)), url("/img/ml.jpg");
+  background:linear-gradient(rgba(0,0,0,0.9), rgba(0,0,0,0.1)), url("https://res.cloudinary.com/dshxxr5lz/image/upload/v1727233979/ml_cpj1jb.jpg");
   background-repeat: no-repeat;
   *background-attachment: scroll;
   background-attachment: fixed;
